--- a/fay/Views/Customer/CustomerHistory.cshtml
+++ b/fay/Views/Customer/CustomerHistory.cshtml
@@ -17,7 +17,7 @@
             {
                 <tr>
                     <td> @Html.DisplayFor(m => i.Namaoutbond)</td>
-                    <td> @Html.DisplayFor(m => i.Harga)</td>
+                    <td> @Html.DisplayFor(m => i.harga)</td>
                     <td> @Html.DisplayFor(m => i.Quantity)</td>
                     <td> @Html.DisplayFor(m => i.Jumlah)</td>
                     <td> @Html.DisplayFor(m => i.Meja)</td>
