--- a/fay/Views/Order/Add.cshtml
+++ b/fay/Views/Order/Add.cshtml
@@ -14,7 +14,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.outbondID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_outbond, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @using fay.Models.DB;
                 @using fay;
@@ -22,95 +22,92 @@
                 @using fay.Models.ViewModel;
                 @{
                     List<Orderoutbond> orderoutbond = new List<Orderoutbond>();
-                    using (RestoDBEntities db = new RestoDBEntities())
+                    using (DemoEntities1 db = new DemoEntities1())
                     {
                         foreach (outbond outbond in db.outbonds)
                         {
                             Orderoutbond om = new Orderoutbond();
-                            if (outbond.Stock == 0)
-                            {
-                                om.Text = outbond.outbondID + " - " + outbond.Nama + " (Stock Empty!)";
-                            }
-                            else
-                            {
-                                om.Text = outbond.outbondID + " - " + outbond.Nama;
-                            }
-                            om.Value = outbond.outbondID.ToString();
+                            
+                                om.Text = outbond.id_outbond + " - " + outbond.keterangan;
+                            
+                            om.Value = outbond.id_outbond.ToString();
                             orderoutbond.Add(om);
                         }
                     }
                 }
-                @Html.DropDownListFor(model => model.outbondID, new SelectList(orderoutbond, "Value", "Text"), "", new { @class = "form-control", @id = "outbondList" })
-                @Html.ValidationMessageFor(model => model.outbondID, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.id_outbond, new SelectList(orderoutbond, "Value", "Text"), "", new { @class = "form-control", @id = "outbondList" })
+                @Html.ValidationMessageFor(model => model.id_outbond, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.PelangganID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.id_pelanggan, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @{
                     List<OrderUser> orderUser = new List<OrderUser>();
-                    using (RestoDBEntities db = new RestoDBEntities())
+                    using (DemoEntities1 db = new DemoEntities1())
                     {
-                        foreach (Pelanggan p in db.Pelanggans)
+                        foreach (pelanggan p in db.pelanggans)
                         {
                             OrderUser ou = new OrderUser();
-                            ou.Text = p.NoID + " - " + p.Nama;
-                            ou.Value = p.PelangganID.ToString();
+                            ou.Text = p.no_id + " - " + p.nama;
+                            ou.Value = p.id_pelanggan.ToString();
                             orderUser.Add(ou);
                         }
                     }
                 }
-                @Html.DropDownListFor(model => model.PelangganID, new SelectList(orderUser, "Value", "Text"), "", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.PelangganID, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.id_pelanggan, new SelectList(orderUser, "Value", "Text"), "", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.id_pelanggan, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Keterangan, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.keterangan, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Keterangan, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Keterangan, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.keterangan, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.keterangan, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Meja, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.tgl_akhir, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Meja, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Meja, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.tgl_akhir, new { htmlAttributes = new { @type = "Date", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.tgl_akhir, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="">
-                <div class="col-md-9">
-                    @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @id = "orderQuantity", @readonly = "readonly", @class = "form-control quantityData" } })
-                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.tgl_mulai, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.tgl_mulai, new { htmlAttributes = new { @type = "Date", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.tgl_mulai, "", new { @type = "Date", @class = "text-danger" })
             </div>
-            <div class="col-md-1">
-                <a class="linkPlz" href="javascript:void(0);">
-                    <span class="glyphicon glyphicon-minus quantityMin"></span>
-                </a>
-                <a class="linkPlz" href="javascript:void(0);">
-                    <span class="glyphicon glyphicon-plus quantityPlus"></span>
-                </a>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.tgl_pesan, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.tgl_pesan, new { htmlAttributes = new { @type = "Date", @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.tgl_pesan, "", new { @type = "Date", @class = "text-danger" })
             </div>
-
         </div>
-
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.Harga, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Harga, new { htmlAttributes = new { @id = "orderHarga", @readonly = "readonly", @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Harga, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.quantity, "", new { @type = "Date", @class = "text-danger" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.Jumlah, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Jumlah, new { htmlAttributes = new { @id = "orderTotal", @readonly = "readonly", @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Jumlah, "", new { @class = "text-danger" })
+   <div class="form-group">
+            @Html.LabelFor(model => model.harga, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.harga, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.harga, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.jumlah, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.jumlah, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.jumlah, "", new { @class = "text-danger" })
+            </div>
+        </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-default" />
@@ -125,25 +122,25 @@
 
     var jsonOutput;
     var harga;
-    var jumlahStock;
+    var jumlahketerangan;
     $("#outbondList").change(function () {
         console.log($("#outbondList").val())
         $.ajax({
             type: "POST",
             url: "@Url.Action("GetoutbondData","Order")",
             data: {
-                outbondID: $("#outbondList").val()
+                id_outbond: $("#outbondList").val()
             },
             success: function (data) {
                 jsonOutput = data;
                 harga = jsonOutput.harga;
-                jumlahStock = jsonOutput.);
-                if (jumlahStock != 0) {
-                    $("#orderHarga").val(harga);
+                jumlahketerangan = jsonOutput.keterangan;
+                if (jumlahketerangan != 0) {
+                    $("#orderharga").val(harga);
                     $("#orderQuantity").val(1);
                     amountCounter = 1;
                 } else {
-                    $("#orderHarga").val(harga);
+                    $("#orderharga").val(harga);
                     $("#orderQuantity").val(0);
                     amountCounter = 0;
                 }
@@ -172,7 +169,7 @@
     });
     $("span.quantityPlus").click(function () {
         var temp = amountCounter + 1;
-        if (temp > jumlahStock) {
+        if (temp > jumlahketerangan) {
             console.log("Too Much!")
         } else {
             amountCounter += 1;
