--- a/fay/Views/_Base/_index-login.cshtml
+++ b/fay/Views/_Base/_index-login.cshtml
@@ -6,7 +6,7 @@
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <title>KemonoCafe - @ViewBag.Title</title>
+    <title>OutbondFay - @ViewBag.Title</title>
     <style>
         div.form-plz {
             padding-bottom: 15px;
@@ -32,12 +32,12 @@
             <div class="collapse navbar-collapse" id="mainnav">
                 <ul class="nav navbar-nav">
                     <li><a href="@Url.Action("Index","Home",null,Request.Url.Scheme)">Home</a></li>
-                    <li><a href="#">outbond</a></li>
+                    <li><a href="#">Outbond</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"> </span> Welcome, @ViewBag.Username</span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"> </span> <span> Welcome, @ViewBag.Username</span></a>
                         <ul class="dropdown-outbond">
                             <li><a href="#"><span class="glyphicon glyphicon-lock"></span> Admin Tools</a></li>
                             <li><a href="#"><span class="glyphicon glyphicon-pencil"></span> Edit Profile</a></li>
