--- a/fay/Views/Home/Index.cshtml
+++ b/fay/Views/Home/Index.cshtml
@@ -4,12 +4,12 @@
     Layout = "~/Views/_Base/_index.cshtml";
 }
 <div class="jumbotron">
-    <h1>Fluffy Cafe for All</h1>
-    <p>Enjoy our Fluffy yet huggable Kemono fursuit maid only for our dedicated customer, our High Quality cuisine would make your experience in Maid cafe better than before.</p>
+    <h1>Outbond Fay</h1>
+    <p>Enjoy your holiday with our games. You aren't in Holiday yet without visiting us! Do it Now!!.</p>
     <p><a class="btn btn-primary btn-lg" href="@Url.Action("Index","outbond",null, null)" role="button">Show outbond</a></p>
 </div>
 <div class="why" style="text-align:center;padding-top:25px;padding-bottom:25px">
-    <h2>Why choosing us?</h2>
+    <h2>Why choose us?</h2>
     <h4>Here's some reason why we better than anyone else!</h4>
     <hr />
 </div>
@@ -20,7 +20,7 @@
                 <span class="glyphicon glyphicon-star"></span>
             </div>
             <div class="caption">
-                <p style="text-align:center">Our Restaurant is Rated 5 Stars by FoodAvisor, MyRestaurant.co, and JapaneseFurryCommunity. to ensure you got the best experience for your special Prom night or Gala Dinner.</p>
+                <p style="text-align:center">Our Games is Rated 5 Stars by GameAvisor, MyOutbond.co, and JapaneseFurryCommunity. To ensure you got the best experience for your special Prom night or Family Hangout.</p>
             </div>
         </div>
     </div>
@@ -30,27 +30,27 @@
                 <span class="glyphicon glyphicon-heart-empty"></span>
             </div>
             <div class="caption">
-                <p style="text-align:center">Our restorant are in #1 position by TripAdvisor and Japanese Guide Book and most favourited restaurant by International Furries who visiting to Japan.</p>
+                <p style="text-align:center">Our Agents are in #1 position by TripAdvisor and Japanese Guide Book and most favourited restaurant by International Furries who visiting to Japan.</p>
             </div>
         </div>
     </div>
     <div class="col-sm-4 col-md-3">
         <div class="overview">
             <div class="icon" style="font-size:128px;text-align:center;">
-                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-star-empty"></span>
             </div>
             <div class="caption">
-                <p style="text-align:center">Our Restaurant is Rated 5 Stars by FoodAvisor, MyRestaurant.co, and JapaneseFurryCommunity. to ensure you got the best experience for your special Prom night or Gala Dinner.</p>
+                <p style="text-align:center">Our Games is Rated 5 Stars by GameAvisor, MyOutbond.co, and JapaneseFurryCommunity. To ensure you got the best experience for your special Prom night or Family Hangout.</p>
             </div>
         </div>
     </div>
     <div class="col-sm-4 col-md-3">
         <div class="overview">
             <div class="icon" style="font-size:128px;text-align:center;">
-                <span class="glyphicon glyphicon-star"></span>
+                <span class="glyphicon glyphicon-heart"></span>
             </div>
             <div class="caption">
-                <p style="text-align:center">Our Restaurant is Rated 5 Stars by FoodAvisor, MyRestaurant.co, and JapaneseFurryCommunity. to ensure you got the best experience for your special Prom night or Gala Dinner.</p>
+                <p style="text-align:center">Our Games is Rated 5 Stars by GameAvisor, MyOutbond.co, and JapaneseFurryCommunity. To ensure you got the best experience for your special Prom night or Family Hangout.</p>
             </div>
         </div>
     </div>
