--- a/fay/Views/_Base/_index.cshtml
+++ b/fay/Views/_Base/_index.cshtml
@@ -10,7 +10,7 @@
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <title>KemonoCafe - @ViewBag.Title</title>
+    <title>OutbondFay - @ViewBag.Title</title>
     <style>
         body {
             padding-top: 70px;
@@ -57,7 +57,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Home", null, Request.Url.Scheme)">KemonoCafe</a>
+                <a class="navbar-brand" href="@Url.Action("Index", "Home", null, Request.Url.Scheme)">OutbondFay</a>
             </div>
             <div class="collapse navbar-collapse" id="mainnav">
                 <ul class="nav navbar-nav">
@@ -90,7 +90,6 @@
                                 <li><a href="@Url.Action("Index","Order",null,null)">List of Orders</a></li>
                             </ul>
                         </li>
-}
 <li><a href="@Url.Action("Index", "About", null, Request.Url.Scheme)">About</a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
