--- a/fay/Views/Customer/CustomerPartial.cshtml
+++ b/fay/Views/Customer/CustomerPartial.cshtml
@@ -4,6 +4,10 @@
     <table class="table table-striped table-condensed table-hover">
         <thead>
             <tr>
+                @{
+                    fay.Models.EntityManager.UserManager um = new fay.Models.EntityManager.UserManager();
+
+                }
                 <th>Customer ID</th>
                 <th>ID Number</th>
                 <th>Name</th>
