--- a/fay/Views/Order/Add.cshtml
+++ b/fay/Views/Order/Add.cshtml
@@ -27,9 +27,9 @@
                         foreach (outbond outbond in db.outbonds)
                         {
                             Orderoutbond om = new Orderoutbond();
-                            
-                                om.Text = outbond.id_outbond + " - " + outbond.keterangan;
-                            
+
+                            om.Text = outbond.id_outbond + " - " + outbond.keterangan;
+
                             om.Value = outbond.id_outbond.ToString();
                             orderoutbond.Add(om);
                         }
@@ -94,20 +94,21 @@
                 @Html.ValidationMessageFor(model => model.quantity, "", new { @type = "Date", @class = "text-danger" })
             </div>
         </div>
-   <div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.harga, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.harga, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.harga, new { htmlAttributes = new { @id = "orderHarga", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.harga, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.jumlah, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.jumlah, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.jumlah, new { htmlAttributes = new { @id = "orderTotal",  @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.jumlah, "", new { @class = "text-danger" })
             </div>
         </div>
+       
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-default" />
@@ -134,16 +135,9 @@
             success: function (data) {
                 jsonOutput = data;
                 harga = jsonOutput.harga;
-                jumlahketerangan = jsonOutput.keterangan;
-                if (jumlahketerangan != 0) {
                     $("#orderharga").val(harga);
-                    $("#orderQuantity").val(1);
-                    amountCounter = 1;
-                } else {
-                    $("#orderharga").val(harga);
-                    $("#orderQuantity").val(0);
+                    $("#orderQuantity").val(quantity);
                     amountCounter = 0;
-                }
                 var q = parseInt($("#orderQuantity").val());
                 console.log(q);
                 var t = harga * q;
@@ -167,19 +161,7 @@
             $("#orderTotal").val(t);
         }
     });
-    $("span.quantityPlus").click(function () {
-        var temp = amountCounter + 1;
-        if (temp > jumlahketerangan) {
-            console.log("Too Much!")
-        } else {
-            amountCounter += 1;
-            $("input.quantityData").val(amountCounter);
-            var q = parseInt($("#orderQuantity").val());
-            console.log(q);
-            var t = harga * q;
-            $("#orderTotal").val(t);
-        }
-    });
+    
 </script>
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
