--- a/fay/Views/_Base/_index-login.cshtml
+++ b/fay/Views/_Base/_index-login.cshtml
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">KemonoCafe</a>
+                <a class="navbar-brand" href="#">OutbondFay</a>
             </div>
             <div class="collapse navbar-collapse" id="mainnav">
                 <ul class="nav navbar-nav">
