--- a/fay/Views/Home/Index.cshtml
+++ b/fay/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/_Base/_index.cshtml";
 }
 <div class="jumbotron">
-    <h1>Outbond Fay</h1>
-    <p>Enjoy your holiday with our games. You aren't in Holiday yet without visiting us! Do it Now!!.</p>
+    <h1>OutbondFay</h1>
+    <p>Enjoy your holiday with our games. You aren't in Holiday yet without visiting us! <br> Do it Now!!.</p>
     <p><a class="btn btn-primary btn-lg" href="@Url.Action("Index","outbond",null, null)" role="button">Show outbond</a></p>
 </div>
 <div class="why" style="text-align:center;padding-top:25px;padding-bottom:25px">
