--- a/fay/Views/Order/OrderPartial.cshtml
+++ b/fay/Views/Order/OrderPartial.cshtml
@@ -11,8 +11,8 @@
                 <th>End Date</th>
                 <th>Start Date</th>
                 <th>Order Date</th>
-                <th>Price</th>
                 <th>Quantity</th>
+                <th>Price</th>
                 <th>Total</th>
                 
             </tr>
@@ -45,7 +45,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Delete Menu</h4>
+                <h4 class="modal-title" id="myModalLabel">Delete Data</h4>
             </div>
             <div class="modal-body">
                 <p>Are you sure want to delete this menu?</p>
