--- a/fay/Views/_Base/_index.cshtml
+++ b/fay/Views/_Base/_index.cshtml
@@ -62,74 +62,94 @@
             <div class="collapse navbar-collapse" id="mainnav">
                 <ul class="nav navbar-nav">
                     <li><a href="@Url.Action("Index", "Home", null, Request.Url.Scheme)">Home</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage outbonds<span class="caret"></span></a>
-                            <ul class="dropdown-outbond">
-                                <li><a href="@Url.Action("Index","outbond",null,null)">Manage outbond</a></li>
-                                <li><a href="@Url.Action("Add","outbond",null,null)">Add outbond</a></li>
-                            </ul>
-                        </li>
-                   
-                        <li><a href="@Url.Action("Index","outbond",null, null)">outbond</a></li>
-                   
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Customers<span class="caret"></span></a>
-                            <ul class="dropdown-outbond">
-                                <li><a href="@Url.Action("Index","Customer",null,null)">Manage Customers</a></li>
-                                <li><a href="@Url.Action("Add","Customer",null,null)">Add Customers</a></li>
-                            </ul>
-                        </li>
-                   
-                    
-            <!-- <li><a href="@Url.Action("History", "Profile", null, Request.Url.Scheme)">Show Purchase History</a></li> -->
-                        
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Orders<span class="caret"></span></a>
-                            <ul class="dropdown-outbond">
-                                <li><a href="@Url.Action("Add","Order",null,null)">Add New Order</a></li>
-                                <li><a href="@Url.Action("Index","Order",null,null)">List of Orders</a></li>
-                            </ul>
-                        </li>
-<li><a href="@Url.Action("Index", "About", null, Request.Url.Scheme)">About</a></li>
-</ul>
-<ul class="nav navbar-nav navbar-right">
-    @if (System.Web.HttpContext.Current.User.Identity.IsAuthenticated == true)
-    {
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"> </span> Welcome, @HttpContext.Current.User.Identity.Name</a>
-            <ul class="dropdown-outbond">
-               
-                    <li><a href="@Url.Action("Index","Admin",null,null)"><span class="glyphicon glyphicon-lock"></span> Admin Tools</a></li>
-                
-                <li><a href="#"><span class="glyphicon glyphicon-pencil"></span> Edit Profile</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="@Url.Action("SignOut", "User", null, Request.Url.Scheme)"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-            </ul>
-        </li>
-    }
-    else
-    {
-        <li>
-            <a href="@Url.Action("SignUp", "User", null, Request.Url.Scheme)">
-                <span class="glyphicon glyphicon-edit span-plz"> </span> Register
-            </a>
-        </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    <span class="glyphicon glyphicon-log-in span-plz"> </span> Login
-                </a>
-                <ul class="dropdown-outbond" style="padding: 15px;">
-                    <div class="navbar-form">
-                    </div>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Outbonds<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="@Url.Action("Index","Outbond",null,null)">Manage Outbond</a></li>
+                            <li><a href="@Url.Action("Add","Outbond",null,null)">Add Outbond</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Customers<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="@Url.Action("Index","Customer",null,null)">Manage Customers</a></li>
+                            <li><a href="@Url.Action("Add","Customer",null,null)">Add Customers</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Orders<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="@Url.Action("Add","Order",null,null)">Add New Order</a></li>
+                            <li><a href="@Url.Action("Index","Order",null,null)">List of Orders</a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="@Url.Action("Index", "About", null, Request.Url.Scheme)">About</a></li>
                 </ul>
-            </li>
-    }
-</ul>
-</div><!-- /.navbar-collapse -->
-</div><!-- /.container-fluid -->
-</nav>
-<div class="container body-content">
-    @RenderBody()
-</div>
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"> </span> Welcome, @HttpContext.Current.User.Identity.Name</a>
+                        <ul class="dropdown-menu">
+
+                            <li><a href="@Url.Action("Index","Admin",null,null)"><span class="glyphicon glyphicon-lock"></span> Admin Tools</a></li>
+
+                            <li><a href="#"><span class="glyphicon glyphicon-pencil"></span> Edit Profile</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="@Url.Action("SignOut", "User", null, Request.Url.Scheme)"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="@Url.Action("SignUp", "User", null, Request.Url.Scheme)">
+                            <span class="glyphicon glyphicon-edit span-plz"> </span> Register
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-log-in span-plz"> </span> Login
+                        </a>
+                        <ul class="dropdown-menu" style="padding: 15px;">
+                            <div class="navbar-form">
+                                @model fay.Models.ViewModel.UserLoginView
+                                @using (Html.BeginForm("LogIn", "User", FormMethod.Post))
+                                {
+
+                                    @Html.AntiForgeryToken()
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <div class="form-group form-plz">
+                                        @Html.EditorFor(model => model.LoginName, new { htmlAttributes = new { @class = "form-control", placeholder = "Username" } })
+
+                                    </div>
+
+                                    <div class="form-group form-plz">
+                                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", placeholder = "Password" } })
+
+                                    </div>
+
+                                    <div class="form-group">
+                                        <div class="">
+                                            <input type="submit" value="Login" class="btn btn-default" />
+                                        </div>
+                                    </div>
+                                    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+                                    <script src="~/Scripts/jquery.validate.min.js"></script>
+                                    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+                                }
+                            </div>
+                        </ul>
+                    </li>
+
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <div class="container body-content">
+        @RenderBody()
+    </div>
 </body>
 </html>
